--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,14 @@ diff-match-patch==20181111
 Django==3.0.5
 django-import-export==2.0.2
 django-mdeditor==0.1.18
+django-pure-pagination==0.3.0
 django-simpleui==3.9.1
 et-xmlfile==1.0.1
+gunicorn==19.9.0
 jdcal==1.4.1
 MarkupPy==1.14
 mistune==0.8.4
+mysqlclient==1.4.6
 odfpy==1.4.1
 openpyxl==3.0.3
 PyMySQL==0.9.3
@@ -18,5 +21,3 @@ sqlparse==0.3.1
 tablib==1.1.0
 xlrd==1.2.0
 xlwt==1.3.0
-mysqlclient==1.4.6
-gunicorn==19.9.0
